tests/varres/tprevent_forloopvar_mutations.nim
discard """
  errormsg: "type mismatch: got <int>"
"""

for i in 0..10:
  echo i
  inc i
